Updated Azure Storage Packages to latest

--- a/Tests/BetterCms.Modules.Tests/packages.config
+++ b/Tests/BetterCms.Modules.Tests/packages.config
@@ -15,14 +15,17 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net40" />
-  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net40" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net40" />
   <package id="MicrosoftWebMvc" version="2.0" targetFramework="net40" />
   <package id="Moq" version="4.0.10827" requireReinstallation="True" />
   <package id="Mvc3Futures" version="3.0.20105.0" targetFramework="net40" />
   <package id="MvcContrib" version="2.0.95.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="NHibernate.Logging" version="1.3.3" targetFramework="net40" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
@@ -30,6 +33,10 @@
   <package id="ServiceStack.Common" version="3.9.71" targetFramework="net40" />
   <package id="ServiceStack.Text" version="3.9.71" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
-  <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
-  <package id="WindowsAzure.Storage" version="2.0.4.1" targetFramework="net40" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net45" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net45" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net45" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net45" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="8.1.1" targetFramework="net45" />
 </packages>
